--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 {% for blog in blogs %}
-<h3><a href= "/details"/>{{blog.title}}</h3>
+<h3><a href= "/blog">{{blog.title}}</a></h3>
 <p>{{blog.body}}</p>
 <hr />
 {% endfor %}
