This is for final submission

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-    <a href="/newpost"> Add a New post </a>
-    <a href="/blog"> Main Blog page </a>
+    <a href="/newpost"><h1 style="color:red;text-align:right;font-size:16px">Add a New post </h1></a>
+    <a href="/blog"> <h1 style="color:red;text-align:right;font-size:16px"> Main Blog page</h1></a>
     
     <style>
         .title {
-            font-size: 16px
+            font-size: 20px
         }
 
         .blog {
