--- a/templates/main.html
+++ b/templates/main.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Build A Blog{% endblock %}
+{% block title %} Build A Blog {% endblock %}
 
 {% block content %}
 
 {% for blog in blogs %}
-<h3><a href= "/blog">{{blog.title}}</a></h3>
+<h3><a href= "/detail?id={{blog.id}}">{{blog.title}}</a></h3>
 <p>{{blog.body}}</p>
 <hr />
 {% endfor %}
